@@ -3,9 +3,11 @@ not-yet-released
 	* Sven Dahl provides a patch for using psmisc with uclibc
 	* Sid flag in options is d not S. SF#791537
 	* Fixed typo in checking ss_family SF#845292
-	* Lines not truncated using UTF-8 SF Patch: #757164
+	* Lines not truncated using UTF-8 SF Patch: #757164 Debian: #151523
 	* Case insensitve matching with -I flags SF Patch: #740662
 	* inode and devices use ino_t and dev_t SF#: 
+	* Allow pstree to use ASCII characters with -A flag, patch by
+	  Branden Robinson Debian: #240973
 
 2004-04-05  gettextize  <bug-gnu-gettext@gnu.org>
 
